[core] Allow building PMD under Java 18+
 - Tests would fail due to the internal usage of SecurityManager without this flag